--- a/SWT_Ex6_RouletteGame/RouletteGame.Tests/RouletteGame.Tests.csproj
+++ b/SWT_Ex6_RouletteGame/RouletteGame.Tests/RouletteGame.Tests.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FieldBet.cs" />
+    <Compile Include="FieldBetTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
