--- a/SWT_Ex6_RouletteGame/RouletteGame.Tests/RouletteGame.Tests.csproj
+++ b/SWT_Ex6_RouletteGame/RouletteGame.Tests/RouletteGame.Tests.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="FieldBetTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stubs.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RouletteGame\RouletteGame.csproj">
