Tilføjet test til ColorBetTests.cs

--- a/SWT_Ex6_RouletteGame/RouletteGame.Tests/RouletteGame.Tests.csproj
+++ b/SWT_Ex6_RouletteGame/RouletteGame.Tests/RouletteGame.Tests.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColorBetTests.cs" />
     <Compile Include="EvenOddBetTest.cs" />
     <Compile Include="FieldBetTests.cs" />
     <Compile Include="FieldTests.cs" />
