--- a/SWT_Ex6_RouletteGame/RouletteGame.Tests/RouletteGame.Tests.csproj
+++ b/SWT_Ex6_RouletteGame/RouletteGame.Tests/RouletteGame.Tests.csproj
@@ -48,6 +48,7 @@
     <Compile Include="FieldBetTests.cs" />
     <Compile Include="FieldTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RouletteGameTests.cs" />
     <Compile Include="Stubs.cs" />
   </ItemGroup>
   <ItemGroup>
